# stereoMagic

./: CMakeLists.txt  package.xml
cfg/: dynamic.cfg
include/stereoMagic/: stereo_nodelet.h  stereo_nodelet_test.h
launch/: nodelet_test.launch  nodelet_test_0copy.launch  stereo.launch  stereo_realsense.launch
params/: good.yaml
plugin/: stereo_nodelet_description.xml  stereo_nodelet_test_description.xml
rviz/: show_enhance.rviz
scripts/: rectify.py
src/: depthProcess.cpp  stereo_node.cpp  stereo_node_.cpp  stereo_nodelet.cpp  stereo_nodelet_test.cpp
